# axum-api-template

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/2025-07-26-184925_create_users/: down.sql  up.sql
migrations/2025-07-26-185020_create_tokens/: down.sql  up.sql
src/: app.rs  lib.rs  main.rs  schema.rs
src/auth/: auth_dto.rs  auth_handler.rs  auth_middleware.rs  auth_repository.rs  auth_service.rs  auth_tokens.rs  mod.rs
src/config/: database.rs
src/db/models/: mod.rs  refresh_token.rs  revoked_token.rs  user.rs
src/errors/: mod.rs
src/health/: health_handler.rs
src/middleware/: error_middleware.rs  mod.rs  rate_limiter.rs
src/routes/: mod.rs
src/user/: mod.rs  user_dto.rs  user_handler.rs  user_repository.rs  user_service.rs
src/utils/: validation.rs
tests/: auth_test.rs  health_test.rs  middleware_test.rs  password_reset_test.rs  user_test.rs
tests/common/: mod.rs
