[package]
name = "axum-api-template"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
tokio = { version = "1.44", features = ["full"] }
axum = "0.8"
axum-extra = { version = "0.10", features = ["multipart"] }
hyper = { version = "1.6", features = ["full"] }
hyper-util = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower-cookies = { version = "0.11", features = ["signed", "private"] }

# Database
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono", "serde_json", "uuid", "numeric"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
jsonwebtoken = "9.3"
bcrypt = "0.16"
uuid = { version = "1.16", features = ["v4", "serde"] }

# Validation & Error Handling
validator = { version = "0.20", features = ["derive"] }

# Time & Date
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Utilities
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.9"
regex = "1.11"
once_cell = "1.20"
bytes = "1.9"
http-body-util = "0.1"
futures = "0.3"

[dev-dependencies]
anyhow = "1.0"
